--- a/AndroidsDemo/res/layout/activity_ratioimageview.xml
+++ b/AndroidsDemo/res/layout/activity_ratioimageview.xml
@@ -1,21 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:app1="http://schemas.android.com/apk/res/com.example.androidsdemo"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="#ffffff"
+              android:orientation="vertical">
 
-    <cn.forward.androids.views.RatioImageView
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:scaleType="fitXY"
-        app:height_to_width_ratio="0.2"
-        android:src="@drawable/chatplane_main_bg" />
+  <cn.forward.androids.views.RatioImageView
+          android:layout_width="100dp"
+          android:layout_height="wrap_content"
+          app:is_height_fix_drawable_size_ratio="true"
+          android:src="@drawable/chatplane_main_bg"/>
 
-    <cn.forward.androids.views.RatioImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/chatplane_main_bg" />
+  <LinearLayout
+          android:orientation="horizontal"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content">
+    <cn.forward.androids.views.MaskImageView
+            android:layout_width="150dp"
+            android:layout_height="100dp"
+            android:scaleType="fitXY"
+            android:clickable="true"
+            app1:is_ignore_alpha="false"
+            app:mask_color="#88000000"
+            android:src="@drawable/ic_launcher"/>
+    <cn.forward.androids.views.MaskImageView
+            android:layout_width="150dp"
+            android:layout_height="100dp"
+            android:scaleType="fitXY"
+            android:clickable="true"
+            app1:is_ignore_alpha="true"
+            app:mask_color="#88000000"
+            android:src="@drawable/ic_launcher"/>
+  </LinearLayout>
+
+  <cn.forward.androids.views.ShapeImageView
+          android:layout_width="150dp"
+          android:layout_height="150dp"
+          android:scaleType="fitXY"
+          app:shape="circle"
+          app1:border_size="10dp"
+          app1:border_color="#ff0000"
+          android:src="@drawable/chatplane_main_bg"/>
+  <cn.forward.androids.views.ShapeImageView
+          android:layout_width="150dp"
+          android:layout_height="150dp"
+          android:scaleType="fitXY"
+          app:shape="rect"
+          app:round_radius="45px"
+          app1:border_size="10dp"
+          app1:border_color="#ff0000"
+          android:src="@drawable/chatplane_main_bg"/>
 
 </LinearLayout>
