完善了MaskImageView,可以设置前景图或背景图的遮罩

--- a/AndroidsDemo/res/layout/activity_maskimageview.xml
+++ b/AndroidsDemo/res/layout/activity_maskimageview.xml
@@ -4,52 +4,119 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="#ffffff"
+              android:padding="5dp"
               android:orientation="vertical">
 
-  <cn.forward.androids.views.RatioImageView
-          android:layout_width="100dp"
-          android:layout_height="wrap_content"
-          app:is_height_fix_drawable_size_ratio="true"
-          android:src="@drawable/chatplane_main_bg"/>
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        <cn.forward.androids.views.MaskImageView
+                android:layout_width="110dp"
+                android:layout_height="110dp"
+                android:scaleType="fitXY"
+                android:clickable="true"
+                app:mask_level="background"
+                app:is_ignore_alpha="true"
+                app:mask_color="#88000000"
+                android:background="#dddd00"
+                android:src="@drawable/ic_launcher"/>
+        <FrameLayout android:layout_width="wrap_content" android:layout_height="1dp"
+                     android:layout_weight="1"/>
+        <cn.forward.androids.views.MaskImageView
+                android:layout_width="110dp"
+                android:layout_height="110dp"
+                android:scaleType="fitXY"
+                android:clickable="true"
+                app:mask_level="background"
+                app:is_ignore_alpha="true"
+                app:mask_color="#88ffffff"
+                android:background="#000000"
+                android:src="@drawable/ic_launcher"/>
+        <FrameLayout android:layout_width="wrap_content" android:layout_height="1dp"
+                android:layout_weight="1"/>
+        <cn.forward.androids.views.MaskImageView
+                android:layout_width="110dp"
+                android:layout_height="110dp"
+                android:scaleType="fitXY"
+                android:clickable="true"
+                app:mask_level="background"
+                app:is_ignore_alpha="true"
+                app:mask_color="#88000000"
+                android:background="@drawable/bg2"
+                android:src="@drawable/ic_launcher"/>
+    </LinearLayout>
+    <LinearLayout
+            android:layout_marginTop="5dp"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        <cn.forward.androids.views.MaskImageView
+                android:layout_width="110dp"
+                android:layout_height="110dp"
+                android:scaleType="fitXY"
+                android:clickable="true"
+                android:background="@drawable/bg"
+                app:mask_level="foreground"
+                app:is_ignore_alpha="true"
+                app:mask_color="#880000ff"
+                android:src="@drawable/ic_launcher"/>
+        <cn.forward.androids.views.MaskImageView
+                android:layout_marginLeft="5dp"
+                android:layout_width="110dp" android:layout_height="110dp"
+                android:scaleType="fitXY"
+                android:clickable="true"
+                android:background="@drawable/bg"
+                app:mask_level="foreground"
+                app:is_ignore_alpha="false"
+                app:mask_color="#880000ff"
+                android:src="@drawable/ic_launcher"
+                />
+        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
+                  android:layout_weight="1"
+                  android:layout_gravity="center"
+                  android:gravity="center"
+                  android:textColor="#000000"
+                  android:textSize="20dp"
+                  android:text="前景遮罩"
+                />
+    </LinearLayout>
 
-  <LinearLayout
-          android:orientation="horizontal"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content">
-    <cn.forward.androids.views.MaskImageView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:scaleType="fitXY"
-            android:clickable="true"
-            app:is_ignore_alpha="false"
-            app:mask_color="#88000000"
-            android:src="@drawable/ic_launcher"/>
-    <cn.forward.androids.views.MaskImageView
-            android:layout_width="150dp"
-            android:layout_height="100dp"
-            android:scaleType="fitXY"
-            android:clickable="true"
-            app:is_ignore_alpha="true"
-            app:mask_color="#88000000"
-            android:src="@drawable/ic_launcher"/>
-  </LinearLayout>
-
-  <cn.forward.androids.views.ShapeImageView
-          android:layout_width="150dp"
-          android:layout_height="150dp"
-          android:scaleType="fitXY"
-          app:shape="circle"
-          app:border_size="10dp"
-          app:border_color="#ffffff"
-          android:src="@drawable/chatplane_main_bg"/>
-  <cn.forward.androids.views.ShapeImageView
-          android:layout_width="150dp"
-          android:layout_height="150dp"
-          android:scaleType="fitXY"
-          app:shape="rect"
-          app:round_radius="45px"
-          app:border_size="10dp"
-          app:border_color="#ff0000"
-          android:src="@drawable/chatplane_main_bg"/>
-
+    <LinearLayout
+            android:layout_marginTop="5dp"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        <cn.forward.androids.views.MaskImageView
+                android:layout_width="110dp"
+                android:layout_height="110dp"
+                android:scaleType="fitXY"
+                android:clickable="true"
+                android:background="@drawable/bg"
+                app:mask_level="background"
+                app:is_ignore_alpha="true"
+                app:mask_color="#880000ff"
+                android:src="@drawable/ic_launcher"/>
+        <cn.forward.androids.views.MaskImageView
+                android:layout_marginLeft="5dp"
+                android:layout_width="110dp"
+                android:layout_height="110dp"
+                android:scaleType="fitXY"
+                android:clickable="true"
+                android:background="@drawable/bg"
+                app:mask_level="background"
+                app:is_ignore_alpha="false"
+                app:mask_color="#880000ff"
+                android:src="@drawable/ic_launcher"
+                />
+        <TextView android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:layout_weight="1"
+                  android:layout_gravity="center"
+                  android:gravity="center"
+                  android:textColor="#000000"
+                  android:textSize="20dp"
+                  android:text="背景遮罩"
+                />
+    </LinearLayout>
 </LinearLayout>
