--- a/AndroidsLib/res/values/attrs.xml
+++ b/AndroidsLib/res/values/attrs.xml
@@ -1,38 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-  <declare-styleable name="RatioImageView">
+    <declare-styleable name="RatioImageView">
 
-    <!--宽度是否根据src图片的比例来测量（高度已知）-->
-    <attr name="is_width_fix_drawable_size_ratio" format="boolean"/>
-    <!--高度是否根据src图片的比例来测量（宽度已知）-->
-    <attr name="is_height_fix_drawable_size_ratio" format="boolean"/>
+        <!--宽度是否根据src图片的比例来测量（高度已知）-->
+        <attr name="is_width_fix_drawable_size_ratio" format="boolean"/>
+        <!--高度是否根据src图片的比例来测量（宽度已知）-->
+        <attr name="is_height_fix_drawable_size_ratio" format="boolean"/>
 
-    <!-- 高度设置，参考宽度，如0.5 , 表示 高度＝宽度×０.5 -->
-    <attr name="height_to_width_ratio" format="float"/>
-    <!-- 宽度设置，参考高度，如0.5 , 表示 宽度＝高度×０.5 -->
-    <attr name="width_to_height_ratio" format="float"/>
+        <!-- 高度设置，参考宽度，如0.5 , 表示 高度＝宽度×０.5 -->
+        <attr name="height_to_width_ratio" format="float"/>
+        <!-- 宽度设置，参考高度，如0.5 , 表示 宽度＝高度×０.5 -->
+        <attr name="width_to_height_ratio" format="float"/>
 
-  </declare-styleable>
+    </declare-styleable>
 
-  <declare-styleable name="MaskImageView">
+    <declare-styleable name="MaskImageView">
 
-    <!-- 设置了setClickable(true)才生效,默认开启遮罩-->
-    <attr name="is_show_mask_on_click" format="boolean"/>
-    <attr name="mask_color" format="color"/>
-    <!--是否忽略图片的透明度，默认为true,透明部分不显示遮罩 -->
-    <attr name="is_ignore_alpha" format="boolean"/>
+        <attr name="mask_level" format="enum">
+            <enum name="background" value="1"/>
+            <enum name="foreground" value="2"/>
+        </attr>
+        <!-- 设置了setClickable(true)才生效,默认开启遮罩-->
+        <attr name="is_show_mask_on_click" format="boolean"/>
+        <attr name="mask_color" format="color"/>
+        <!--是否忽略图片的透明度，默认为true,透明部分不显示遮罩 -->
+        <attr name="is_ignore_alpha" format="boolean"/>
 
-  </declare-styleable>
+    </declare-styleable>
 
-  <declare-styleable name="ShapeImageView">
-    <attr name="shape" format="enum">
-      <enum name="rect" value="1"/>
-      <enum name="circle" value="2"/>
-    </attr>
-    <attr name="round_radius" format="dimension"/>
-    <attr name="border_size" format="dimension"/>
-    <attr name="border_color" format="color"/>
-  </declare-styleable>
+    <declare-styleable name="ShapeImageView">
+        <attr name="shape" format="enum">
+            <enum name="rect" value="1"/>
+            <enum name="circle" value="2"/>
+        </attr>
+        <attr name="round_radius" format="dimension"/>
+        <attr name="border_size" format="dimension"/>
+        <attr name="border_color" format="color"/>
+    </declare-styleable>
 
 </resources>
