--- a/AndroidsDemo/res/layout/activity_shapeimageview.xml
+++ b/AndroidsDemo/res/layout/activity_shapeimageview.xml
@@ -23,7 +23,7 @@
                         app:shape="circle"
                         app:border_size="0dp"
                         app:border_color="#ffffff"
-                        android:src="@drawable/chatplane_main_bg"/>
+                        android:src="@drawable/world_map"/>
                 <cn.forward.androids.views.ShapeImageView
                         android:layout_marginLeft="5dp"
                         android:layout_width="110dp"
@@ -33,7 +33,7 @@
                         app:round_radius="15dp"
                         app:border_size="0dp"
                         app:border_color="#ffffff"
-                        android:src="@drawable/chatplane_main_bg"/>
+                        android:src="@drawable/world_map"/>
 
                 <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                           android:layout_gravity="center"
@@ -56,7 +56,7 @@
                         app:shape="circle"
                         app:border_size="2dp"
                         app:border_color="#000000"
-                        android:src="@drawable/chatplane_main_bg"/>
+                        android:src="@drawable/world_map"/>
                 <cn.forward.androids.views.ShapeImageView
                         android:layout_marginLeft="5dp"
                         android:layout_width="110dp"
@@ -66,7 +66,7 @@
                         app:round_radius="15dp"
                         app:border_size="2dp"
                         app:border_color="#000000"
-                        android:src="@drawable/chatplane_main_bg"/>
+                        android:src="@drawable/world_map"/>
 
                 <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                           android:layout_gravity="center"
@@ -88,7 +88,7 @@
                         app:shape="circle"
                         app:border_size="2dp"
                         app:border_color="#ffffff"
-                        android:src="@drawable/chatplane_main_bg"/>
+                        android:src="@drawable/world_map"/>
                 <cn.forward.androids.views.ShapeImageView
                         android:layout_marginLeft="5dp"
                         android:layout_width="110dp"
@@ -98,7 +98,7 @@
                         app:round_radius="15dp"
                         app:border_size="2dp"
                         app:border_color="#ffffff"
-                        android:src="@drawable/chatplane_main_bg"/>
+                        android:src="@drawable/world_map"/>
 
                 <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                           android:layout_gravity="center"
