--- a/AndroidsDemo/res/layout/activity_keyboard_layout.xml
+++ b/AndroidsDemo/res/layout/activity_keyboard_layout.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<cn.forward.androids.views.KeyboardLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/keyboard_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#ffffff"
-    android:orientation="vertical">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:background="#ffffff"
+             android:orientation="vertical">
+
+    <cn.forward.androids.views.KeyboardLayout
+        android:id="@+id/keyboard_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="#888888" />
+            android:background="#888888"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -28,7 +33,7 @@
                 android:layout_height="50dp"
                 android:layout_weight="1"
                 android:hint="input"
-                android:textColor="#000000" />
+                android:textColor="#000000"/>
 
             <Button
                 android:id="@+id/emoji_btn"
@@ -36,7 +41,7 @@
                 android:layout_height="50dp"
                 android:background="@drawable/btn_selector"
                 android:text="emoji"
-                android:textColor="#000000" />
+                android:textColor="#000000"/>
         </LinearLayout>
 
         <FrameLayout
@@ -45,6 +50,6 @@
             android:layout_height="200dp"
 
             android:background="@drawable/ic_emoij"
-            android:visibility="gone" />
+            android:visibility="gone"/>
     </LinearLayout>
-</cn.forward.androids.views.KeyboardLayout>
+</FrameLayout>
